# zcrc

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: clang-tidy.yml  codeql.yml  emscripten.yml
benchmark/: benchmarks.cpp  construct_cstr_graph.py
img/: README.md
include/crc/: crc.hpp
include/zcrc/: zcrc.hpp
src/: crc.cppm  zcrc.cppm
test/: tests.cpp
